// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots Cars / Core / LedIndicator Blink 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="led-indicator led-indicator--color-red led-indicator--size-normal led-indicator--enabled led-indicator--blink "
    />
  </div>
</div>
`;

exports[`Storyshots Cars / Core / LedIndicator Enabled 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="led-indicator led-indicator--color-blue led-indicator--size-normal led-indicator--enabled "
    />
  </div>
</div>
`;

exports[`Storyshots Cars / Core / LedIndicator Green 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="led-indicator led-indicator--color-green led-indicator--size-normal led-indicator--enabled "
    />
  </div>
</div>
`;

exports[`Storyshots Cars / Core / LedIndicator Large 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="led-indicator led-indicator--color-blue led-indicator--size-large led-indicator--enabled "
    />
  </div>
</div>
`;

exports[`Storyshots Cars / Core / LedIndicator Main 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="led-indicator led-indicator--color-red led-indicator--size-normal "
    />
  </div>
</div>
`;

exports[`Storyshots Cars / Core / LedIndicator Normal 1`] = `
<div
  lang="fr-FR"
>
  <div
    className="rs"
  >
    <div
      className="led-indicator led-indicator--color-red led-indicator--size-normal led-indicator--enabled "
    />
  </div>
</div>
`;
